			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

26-Sep-2003
~~~~~~~~~~~
Bugfix: If no pinboard or panel icons were present, the menu could not be
	opened (reported by John Pettigrew).

22-Sep-2003
~~~~~~~~~~~
Added italian manual, updated it.po (Yuri Bongiorno)
Implementation of Format, just as a user-defined command.  Also mount
point menu items reflect mounted/not mounted status (Stephen Watson).

18-Sep-2003
~~~~~~~~~~~
Implementation of Free Space (Stephen Watson).  OpenDir SOAP message now
takes an optional Window element.  Pass the same Window to re-use the window.

17-Sep-2003
~~~~~~~~~~~
Allow ejecting mounted media.

12-Sep-2003
~~~~~~~~~~~
Don't create a corrupted pinboard/panel file if a non-UTF8 pathname is
dragged to it (reported by Eugeni Andreechtchev).
Get file icons using freedesktop.org icon theme system.

05-Sep-2003
~~~~~~~~~~~
Added Czech translation (Jan Provaznik).

20-Aug-2003
~~~~~~~~~~~
Help, Format, Eject and Free Space now appear in the AppMenu section of the
menu. Help is only shown for applications, and the others only for mount
points.

16-Aug-2003
~~~~~~~~~~~
Added ability to call external programs to generate thumbnails for types 
other than image/* (Stephen Watson).

12-Aug-2003
~~~~~~~~~~~
If a string can't be converted from the local character set to UTF-8,
fallback to converting from iso-8859-1.

07-Aug-2003
~~~~~~~~~~~
Get shared MIME database through Zero Install, if possible.
Bugfix: Didn't use XDG_DATA_DIRS to find type descriptions.

06-Aug-2003
~~~~~~~~~~~
Updated French manual translation (Arnaud Calvo).

02-Aug-2003
~~~~~~~~~~~
Allow types other than image/* to have thumbnails, although we can't 
generate them yet (Stephen Watson).
Added Eject menu option for unmounted mount points (Stephen Watson).

28-Jul-2003
~~~~~~~~~~~
Doing a Refresh in a directory under /uri/0install triggers a remote refresh.

14-Jul-2003
~~~~~~~~~~~
Less frame-heavy look for info box (Thomas Leonard).