@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+27-Sep-2003
+~~~~~~~~~~~
+Allow icons in Choices to override the theme.
+
 26-Sep-2003
 ~~~~~~~~~~~
 Bugfix: If no pinboard or panel icons were present, the menu could not be
